Bug 1986922 - Add magicdsfilterQuest3.dll to block list. r=gstoll,win-reviewers
Differential Revision: https://phabricator.services.mozilla.com/D264949

UltraBlame original commit: a797d708b4a243a1648128750713d5210b1ccc42

--- a/toolkit/xre/dllservices/mozglue/WindowsDllBlocklistDefs.in
+++ b/toolkit/xre/dllservices/mozglue/WindowsDllBlocklistDefs.in
@@ -1982,6 +1982,31 @@ dll
 42
 )
 )
+#
+Meta
+Quest
+Link
+App
+bug
+1986922
+DllBlocklistEntry
+(
+"
+magicdsfilterQuest3
+.
+dll
+"
+ALL_VERSIONS
+)
+DllBlocklistEntry
+(
+"
+magicdsfilterQuest3s
+.
+dll
+"
+ALL_VERSIONS
+)
 ]
 #
 Shell
