Bug 1990299 - block all versions of Trend Micro DLLs in the content process r=yjuglaret,win-reviewers
As discussed in the bug, we haven't heard anything back from
Trend Micro, and as soon as they release a new version these
crashes are going to start up again. So block all versions of
these DLLs in the content process, and also block the 32-bit
versions that I missed in bug 1872261.

Differential Revision: https://phabricator.services.mozilla.com/D265860

UltraBlame original commit: 279a5ab40a17a83decabf76a98f564d389a9135a

--- a/toolkit/xre/dllservices/mozglue/WindowsDllBlocklistDefs.in
+++ b/toolkit/xre/dllservices/mozglue/WindowsDllBlocklistDefs.in
@@ -3196,6 +3196,9 @@ content
 process
 bug
 1872261
+and
+bug
+1990299
 DllBlocklistEntry
 (
 "
@@ -3203,12 +3206,7 @@ tmmon64
 .
 dll
 "
-(
-2
-9
-0
-1228
-)
+ALL_VERSIONS
 )
 DllBlocklistEntry
 (
@@ -3217,12 +3215,25 @@ TmUmEvt64
 .
 dll
 "
-(
-8
-55
-0
-1403
+ALL_VERSIONS
 )
+DllBlocklistEntry
+(
+"
+tmmon
+.
+dll
+"
+ALL_VERSIONS
+)
+DllBlocklistEntry
+(
+"
+TmUmEvt
+.
+dll
+"
+ALL_VERSIONS
 )
 ]
 GPU_PROCESSES
