Bug 1993938 - Add network.lna.websocket.enabled preference for WebSocket LNA control. r=necko-reviewers,kershaw,valentin
This commit implements enhanced Local Network Access (LNA) configuration
for WebSocket connections by adding the network.lna.websocket.enabled preference.

Changes:
- Add network.lna.websocket.enabled preference (default: true)
- Modify nsHttpTransaction::AllowedToConnectToIpAddressSpace to skip LNA
  checks for WebSocket connections when preference is disabled
- Add browser test for WebSocket LNA preference functionality

The preference allows administrators to selectively disable LNA checks
for WebSocket connections while maintaining checks for regular HTTP requests.

Differential Revision: https://phabricator.services.mozilla.com/D266461

UltraBlame original commit: bd490f57536437a11353daf000febfc0983659e0

--- a/modules/libpref/init/StaticPrefList.yaml
+++ b/modules/libpref/init/StaticPrefList.yaml
@@ -19440,34 +19440,6 @@ always
 #
 Whether
 to
-dispatch
-beforescriptexecute
-and
-afterscriptexecute
-event
-.
--
-name
-:
-dom
-.
-events
-.
-script_execute
-.
-enabled
-type
-:
-bool
-value
-:
-false
-mirror
-:
-always
-#
-Whether
-to
 expose
 test
 interfaces
@@ -48507,9 +48479,22 @@ width
 type
 :
 RelaxedAtomicInt32
+#
+if
+defined
+(
+XP_WIN
+)
+value
+:
+512
+#
+else
 value
 :
 1024
+#
+endif
 mirror
 :
 always
@@ -55177,70 +55162,6 @@ startup
 set_spidermonkey_pref
 :
 always
-#
-Experimental
-support
-for
-Duplicate
-Named
-Capture
-Groups
-in
-JavaScript
-.
--
-name
-:
-javascript
-.
-options
-.
-experimental
-.
-regexp_duplicate_named_groups
-type
-:
-bool
-value
-:
-true
-mirror
-:
-always
-set_spidermonkey_pref
-:
-startup
-#
-Experimental
-support
-for
-Pattern
-Modifiers
-in
-JavaScript
-.
--
-name
-:
-javascript
-.
-options
-.
-experimental
-.
-regexp_modifiers
-type
-:
-bool
-value
-:
-true
-mirror
-:
-always
-set_spidermonkey_pref
-:
-startup
 #
 Experimental
 support
@@ -64296,7 +64217,7 @@ type
 bool
 value
 :
-IS_NIGHTLY_BUILD
+true
 mirror
 :
 always
@@ -68400,35 +68321,6 @@ bool
 value
 :
 IS_EARLY_BETA_OR_EARLIER
-mirror
-:
-always
-#
-Whether
-to
-render
-all
-unknown
-mathml
-elements
-as
-<
-mrow
->
--
-name
-:
-mathml
-.
-unknown_mrow
-.
-enabled
-type
-:
-bool
-value
-:
-true
 mirror
 :
 always
@@ -88990,6 +88882,103 @@ mirror
 :
 always
 #
+Comma
+-
+separated
+list
+of
+domains
+to
+skip
+LNA
+checks
+for
+.
+#
+Supports
+suffix
+wildcard
+patterns
+(
+*
+.
+example
+.
+com
+)
+-
+name
+:
+network
+.
+lna
+.
+skip
+-
+domains
+type
+:
+String
+value
+:
+"
+"
+mirror
+:
+never
+#
+When
+this
+pref
+is
+false
+skip
+all
+LNA
+checks
+for
+WebSocket
+connections
+.
+#
+When
+true
+WebSocket
+connections
+follow
+normal
+LNA
+rules
+.
+#
+Currently
+this
+is
+disabled
+for
+parity
+with
+chrome
+-
+name
+:
+network
+.
+lna
+.
+websocket
+.
+enabled
+type
+:
+RelaxedAtomicBool
+value
+:
+false
+mirror
+:
+always
+#
 The
 proxy
 type
@@ -94961,6 +94950,55 @@ bool
 value
 :
 false
+mirror
+:
+always
+#
+The
+number
+of
+milliseconds
+after
+which
+a
+suspended
+channel
+writing
+#
+to
+a
+cache
+entry
+will
+notify
+all
+readers
+waiting
+for
+a
+callback
+to
+#
+continue
+without
+a
+cache
+entry
+.
+-
+name
+:
+network
+.
+cache
+.
+suspended_writer_delay_ms
+type
+:
+RelaxedAtomicUint32
+value
+:
+5000
 mirror
 :
 always
@@ -116104,6 +116142,70 @@ RelaxedAtomicBool
 value
 :
 false
+mirror
+:
+always
+#
+When
+looking
+for
+a
+recent
+window
+(
+for
+example
+when
+a
+link
+is
+clicked
+#
+on
+from
+an
+external
+application
+)
+whether
+to
+prefer
+windows
+on
+the
+#
+current
+virtual
+desktop
+(
+aka
+workspace
+)
+.
+For
+now
+this
+only
+applies
+on
+Windows
+.
+#
+See
+bug
+1994825
+-
+name
+:
+widget
+.
+prefer_windows_on_current_virtual_desktop
+type
+:
+RelaxedAtomicBool
+value
+:
+true
 mirror
 :
 always
