Bug 1994913 - chore(webgpu): add :jnicol as a WebGPU peer r=webgpu-reviewers,shtrom,jnicol
Differential Revision: https://phabricator.services.mozilla.com/D269000

UltraBlame original commit: 2bc23abfd1b83c6ce58f3fabbf4d9e17a124cc27

--- a/mots.yaml
+++ b/mots.yaml
@@ -120,13 +120,13 @@ updated_at
 -
 10
 -
-15T12
+17T03
 :
-40
+51
 :
-19
+32
 .
-107213
+281516
 +
 00
 :
@@ -12998,6 +12998,9 @@ teoxoy
 -
 *
 aleiserson
+-
+*
+jnicol
 machine_name
 :
 core_webgpu_graphics_submodule
@@ -15149,6 +15152,9 @@ sfoster
 -
 *
 tgiles
+-
+*
+mstriemer
 machine_name
 :
 desktop_theme
@@ -20085,7 +20091,7 @@ hashes
 :
 config
 :
-e3c3d292cb701c56b1ebc1a13d31f6fd3aefd336
+876d2f021b7682ff56d270ac28dd6f4525818d7b
 export
 :
-0b0e7c64fea9c363b5bb2ec257efba8aedd5d81e
+01267db48380ffa54b22bb748771a48388c8d3b7
