Bug 1991951 - (part 2) Split up prefs for backup service to backup and restore. r=omc-reviewers,akulyk,nrishel,mviar,fchasen,jprickett
Differential Revision: https://phabricator.services.mozilla.com/D267855

UltraBlame original commit: 1642be4df601a3588ee48ab9c983f1ba872b744e

--- a/browser/components/backup/tests/xpcshell/xpcshell.toml
+++ b/browser/components/backup/tests/xpcshell/xpcshell.toml
@@ -41,6 +41,28 @@ log
 =
 true
 "
+"
+browser
+.
+backup
+.
+archive
+.
+enabled
+=
+true
+"
+"
+browser
+.
+backup
+.
+restore
+.
+enabled
+=
+true
+"
 ]
 [
 "
@@ -364,6 +386,13 @@ js
 [
 "
 test_SessionStoreBackupResource
+.
+js
+"
+]
+[
+"
+test_SessionStoreBackupResource_mockSessionStore
 .
 js
 "
