Revert "Bug 1991402 - Part 20: Add exhaustive test for built-in objects. r=spidermonkey-reviewers,jandem" for causing bustages at CacheIR.cpp.
This reverts commit 0e723420e06dfa157bf01cde88ca68400471973c.

Revert "Bug 1991402 - Part 19: Make (Specialized)BindFunctionResult shared CacheIR instructions. r=jandem"

This reverts commit 5b4768d1dd6709c9e7e08b67fc94664396902d1c.

Revert "Bug 1991402 - Part 18: Make ArrayJoinResult a shared CacheIR instruction. r=jandem"

This reverts commit 62273e72609efc2f03a1a562befb22e93b3c329f.

Revert "Bug 1991402 - Part 17: Make {PackedArray,Arguments}SliceResult shared CacheIR instructions. r=jandem"

This reverts commit 2cfc9651020f7415b97d36eda8a4d26210b7e507.

Revert "Bug 1991402 - Part 16: Support LoadStringAtResult in Ion ICs. r=jandem"

This reverts commit ed55b76e9d66855ad187b4c9b43a071a879086f9.

Revert "Bug 1991402 - Part 15: Support in CallNumberToString Ion ICs. r=jandem"

This reverts commit edaeec2a44db3552ff122004a05db13a2bddd6a6.

Revert "Bug 1991402 - Part 14: Implement LoadFixedSlotTypedResult for IonCacheIRCompiler. r=jandem"

This reverts commit d822c1b481c92a5b7cf998528204bfaafa4853ca.

Revert "Bug 1991402 - Part 13: Make MathRandomResult a shared CacheIR instruction. r=jandem"

This reverts commit c104700c3faed0bc4fde9e414340b776b5c2988d.

Revert "Bug 1991402 - Part 12: Convert RegExp getters. r=jandem"

This reverts commit 8a6600bfda89f3a61f6309ed0f109728130d28d8.

Revert "Bug 1991402 - Part 11: Convert (Shared)ArrayBuffer getters. r=jandem"

This reverts commit c4692f4209d521f00fac507337bfd7eba8d02227.

Revert "Bug 1991402 - Part 10: Convert DataView getters. r=jandem"

This reverts commit 99d7fb18a57a0696df663401f4a229727676cf13.

Revert "Bug 1991402 - Part 9: Convert TypedArray getters. r=jandem"

This reverts commit 2cf5974bdb57bcd4ab0032929e0b6c19d70e65fb.

Revert "Bug 1991402 - Part 8: Convert Map getters. r=jandem"

This reverts commit 54d2c4effea83c8e93c7ac72a054930dbdb68e0c.

Revert "Bug 1991402 - Par

--- a/js/src/jit/CacheIROps.yaml
+++ b/js/src/jit/CacheIROps.yaml
@@ -3834,7 +3834,7 @@ name
 ArrayJoinResult
 shared
 :
-true
+false
 transpile
 :
 true
@@ -3909,7 +3909,7 @@ name
 PackedArraySliceResult
 shared
 :
-true
+false
 transpile
 :
 true
@@ -3936,7 +3936,7 @@ name
 ArgumentsSliceResult
 shared
 :
-true
+false
 transpile
 :
 true
@@ -5190,7 +5190,7 @@ name
 MathRandomResult
 shared
 :
-true
+false
 transpile
 :
 true
@@ -6720,7 +6720,7 @@ name
 BindFunctionResult
 shared
 :
-true
+false
 transpile
 :
 true
@@ -6744,7 +6744,7 @@ name
 SpecializedBindFunctionResult
 shared
 :
-true
+false
 transpile
 :
 true
