Bug 1983976 - Define variables for the source docs tasks to avoid outputting KeyError when the docs are generated/uploaded. r=releng-reviewers,bhearsum
Differential Revision: https://phabricator.services.mozilla.com/D269082

UltraBlame original commit: a277f626380c720e872697ce9bef202fdab1c365

--- a/taskcluster/kinds/source-test/doc.yml
+++ b/taskcluster/kinds/source-test/doc.yml
@@ -172,6 +172,105 @@ env
 LC_ALL
 :
 C
+#
+Define
+various
+variables
+to
+make
+the
+generation
+happy
+and
+not
+#
+output
+KeyError
+s
+.
+#
+#
+This
+occurs
+when
+sphinx
+is
+processing
+some
+of
+the
+python
+and
+#
+there
+is
+processing
+going
+on
+at
+the
+top
+level
+.
+It
+shows
+up
+in
+#
+automation
+because
+there
+'
+s
+no
+build
+environment
+setup
+and
+so
+#
+the
+python
+code
+can
+'
+t
+work
+out
+what
+these
+variables
+should
+be
+.
+#
+Hence
+in
+defining
+them
+here
+we
+can
+work
+around
+the
+issue
+.
+OS_TARGET
+:
+Linux
+BIN_SUFFIX
+:
+"
+"
+DLL_PREFIX
+:
+"
+"
+DLL_SUFFIX
+:
+"
+"
 artifacts
 :
 -
@@ -467,6 +566,105 @@ MOZ_SOURCE_DOCS_USE_GOOGLE
 :
 "
 1
+"
+#
+Define
+various
+variables
+to
+make
+the
+generation
+happy
+and
+not
+#
+output
+KeyError
+s
+.
+#
+#
+This
+occurs
+when
+sphinx
+is
+processing
+some
+of
+the
+python
+and
+#
+there
+is
+processing
+going
+on
+at
+the
+top
+level
+.
+It
+shows
+up
+in
+#
+automation
+because
+there
+'
+s
+no
+build
+environment
+setup
+and
+so
+#
+the
+python
+code
+can
+'
+t
+work
+out
+what
+these
+variables
+should
+be
+.
+#
+Hence
+in
+defining
+them
+here
+we
+can
+work
+around
+the
+issue
+.
+OS_TARGET
+:
+Linux
+BIN_SUFFIX
+:
+"
+"
+DLL_PREFIX
+:
+"
+"
+DLL_SUFFIX
+:
+"
 "
 taskcluster
 -
