Bug 1993085 - Add places directories to the TypeScript linter. r=linter-reviewers,sylvestre
Differential Revision: https://phabricator.services.mozilla.com/D267875

UltraBlame original commit: c36b3e44d54fe9d9bd7f2bc691c203fd9eddf7ce

--- a/taskcluster/kinds/source-test/mozlint.yml
+++ b/taskcluster/kinds/source-test/mozlint.yml
@@ -1854,6 +1854,37 @@ browser
 /
 components
 /
+places
+/
+*
+*
+/
+*
+.
+*
+js
+'
+-
+'
+browser
+/
+components
+/
+places
+/
+*
+*
+/
+*
+.
+ts
+'
+-
+'
+browser
+/
+components
+/
 search
 /
 *
@@ -1902,6 +1933,37 @@ browser
 components
 /
 urlbar
+/
+*
+*
+/
+*
+.
+ts
+'
+-
+'
+toolkit
+/
+components
+/
+places
+/
+*
+*
+/
+*
+.
+*
+js
+'
+-
+'
+toolkit
+/
+components
+/
+places
 /
 *
 *
