--- a/tools/lint/typescript.yml
+++ b/tools/lint/typescript.yml
@@ -68,7 +68,7 @@ browser
 /
 components
 /
-urlbar
+places
 /
 -
 browser
@@ -76,6 +76,20 @@ browser
 components
 /
 search
+/
+-
+browser
+/
+components
+/
+urlbar
+/
+-
+toolkit
+/
+components
+/
+places
 /
 -
 toolkit
