Bug 1993568 - Test that STL hardening works when we expect it to. r=gsvelto
Right now, it is only enabled on non-Windows debug builds.

Differential Revision: https://phabricator.services.mozilla.com/D268236

UltraBlame original commit: 03754e48edb0fa666bd3fd7d388adbeafe0e7d10

--- a/toolkit/crashreporter/test/unit/xpcshell.toml
+++ b/toolkit/crashreporter/test/unit/xpcshell.toml
@@ -379,6 +379,45 @@ Windows
 "
 [
 "
+test_crash_stl
+.
+js
+"
+]
+run
+-
+if
+=
+[
+"
+os
+!
+=
+'
+win
+'
+&
+&
+debug
+"
+]
+reason
+=
+"
+STL
+hardening
+is
+only
+enabled
+on
+non
+-
+Windows
+debug
+builds
+"
+[
+"
 test_crash_terminator
 .
 js
