Bug 1917128 - Support parsing of <command-end-point> in shape(). r=boris,firefox-style-system-reviewers,firefox-svg-reviewers,layout-reviewers
Patch consequently updates SVG path building to support <command-end-point> values.

Differential Revision: https://phabricator.services.mozilla.com/D267748

UltraBlame original commit: d791817841fb7e33dd3e5b2810003a7685b06f36

--- a/servo/ports/geckolib/cbindgen.toml
+++ b/servo/ports/geckolib/cbindgen.toml
@@ -1115,13 +1115,13 @@ Content
 ContentItem
 "
 "
-AlignSelf
+ContentDistribution
 "
 "
-JustifySelf
+SelfAlignment
 "
 "
-AlignItems
+ItemPlacement
 "
 "
 ComputedJustifyItems
@@ -2598,6 +2598,44 @@ FromPercentage
 (
 float
 )
+;
+inline
+gfx
+:
+:
+Point
+ToGfxPoint
+(
+const
+CSSSize
+*
+aBasis
+=
+nullptr
+)
+const
+;
+gfx
+:
+:
+Point
+ToGfxPoint
+(
+const
+CSSSize
+&
+aBasis
+)
+const
+{
+return
+ToGfxPoint
+(
+&
+aBasis
+)
+;
+}
 ;
 "
 "
@@ -4329,6 +4367,54 @@ _0
 "
 "
 CoordinatePair
+"
+=
+"
+"
+"
+inline
+gfx
+:
+:
+Point
+ToGfxPoint
+(
+const
+CSSSize
+*
+aBasis
+=
+nullptr
+)
+const
+;
+gfx
+:
+:
+Point
+ToGfxPoint
+(
+const
+CSSSize
+&
+aBasis
+)
+const
+{
+return
+ToGfxPoint
+(
+&
+aBasis
+)
+;
+}
+;
+"
+"
+"
+"
+CommandEndPoint
 "
 =
 "
