--- a/testing/web-platform/meta/css/css-shapes/shape-functions/shape-function-invalid.html.ini
+++ b/testing/web-platform/meta/css/css-shapes/shape-functions/shape-function-invalid.html.ini
@@ -26,13 +26,13 @@ shape
 from
 20px
 40px
-curve
-by
+move
+to
 20px
-20px
-via
-10px
 30px
+hline
+to
+top
 )
 "
 should
@@ -64,15 +64,132 @@ shape
 from
 20px
 40px
-curve
-by
+move
+to
 20px
-20px
-via
-10px
 30px
-12px
-32px
+hline
+to
+bottom
+)
+"
+should
+not
+set
+the
+property
+value
+]
+expected
+:
+FAIL
+[
+e
+.
+style
+[
+'
+clip
+-
+path
+'
+\
+]
+=
+"
+shape
+(
+from
+20px
+40px
+move
+to
+20px
+30px
+vline
+to
+left
+)
+"
+should
+not
+set
+the
+property
+value
+]
+expected
+:
+FAIL
+[
+e
+.
+style
+[
+'
+clip
+-
+path
+'
+\
+]
+=
+"
+shape
+(
+from
+20px
+40px
+move
+to
+20px
+30px
+vline
+to
+right
+)
+"
+should
+not
+set
+the
+property
+value
+]
+expected
+:
+FAIL
+[
+e
+.
+style
+[
+'
+clip
+-
+path
+'
+\
+]
+=
+"
+shape
+(
+from
+20px
+40px
+move
+to
+20px
+30px
+hline
+to
+right
+vline
+to
+bottom
+left
+close
 )
 "
 should
