--- a/testing/web-platform/meta/css/motion/parsing/offset-path-shape-parsing.html.ini
+++ b/testing/web-platform/meta/css/motion/parsing/offset-path-shape-parsing.html.ini
@@ -659,162 +659,6 @@ path
 "
 shape
 (
-from
-10px
-10px
-curve
-to
-50px
-20px
-with
-10rem
-1
-%
-)
-"
-should
-set
-the
-property
-value
-]
-expected
-:
-FAIL
-[
-e
-.
-style
-[
-'
-offset
--
-path
-'
-\
-]
-=
-"
-shape
-(
-from
-10px
-10px
-curve
-to
-50px
-20px
-with
-10rem
-1px
-/
-20vh
-1ch
-)
-"
-should
-set
-the
-property
-value
-]
-expected
-:
-FAIL
-[
-e
-.
-style
-[
-'
-offset
--
-path
-'
-\
-]
-=
-"
-shape
-(
-from
-10px
-10px
-curve
-by
-50px
-20px
-with
-10rem
-1px
-/
-20vh
-1ch
-)
-"
-should
-set
-the
-property
-value
-]
-expected
-:
-FAIL
-[
-e
-.
-style
-[
-'
-offset
--
-path
-'
-\
-]
-=
-"
-shape
-(
-from
-10px
-10px
-smooth
-to
-50px
-20px
-with
-10rem
-1
-%
-)
-"
-should
-set
-the
-property
-value
-]
-expected
-:
-FAIL
-[
-e
-.
-style
-[
-'
-offset
--
-path
-'
-\
-]
-=
-"
-shape
-(
 evenodd
 from
 0px
@@ -930,6 +774,46 @@ center
 )
 "
 should
+set
+the
+property
+value
+]
+expected
+:
+FAIL
+[
+e
+.
+style
+[
+'
+offset
+-
+path
+'
+\
+]
+=
+"
+shape
+(
+from
+10px
+10px
+curve
+to
+50px
+20px
+with
+10rem
+1
+%
+12px
+)
+"
+should
+not
 set
 the
 property
