Bug 1992486 - Add a probe to determine if the Recent Activity section is enabled. r=home-newtab-reviewers,nbarrett
There's a race condition with runtime ping and metric registration, where the TelemetryFeed
initialization script might execute (and attempt to use the highlightsEnabled metric) before
it has had a chance to be registered in Firefox version 144 and 145.

We work around this by adding a Promise that resolves when NewTabGleanUtils has completed
registration, which TelemetryFeed will wait for.

That workaround is fine for now, but the plan is to fix this more systemically for early-use
metrics and pings in bug 1992522.

Differential Revision: https://phabricator.services.mozilla.com/D267602

UltraBlame original commit: 5027de56a726479f96f141de564857b8a130d676

--- a/browser/components/newtab/metrics.yaml
+++ b/browser/components/newtab/metrics.yaml
@@ -6129,6 +6129,114 @@ com
 expires
 :
 never
+highlights_enabled
+:
+lifetime
+:
+application
+type
+:
+boolean
+description
+:
+>
+Whether
+"
+highlights
+"
+is
+enabled
+on
+the
+newtab
+.
+AKA
+the
+"
+Recent
+Activity
+"
+section
+.
+Corresponds
+to
+the
+value
+of
+the
+browser
+.
+newtabpage
+.
+activity
+-
+stream
+.
+feeds
+.
+section
+.
+highlights
+pref
+.
+bugs
+:
+-
+https
+:
+/
+/
+bugzilla
+.
+mozilla
+.
+org
+/
+show_bug
+.
+cgi
+?
+id
+=
+1992486
+data_reviews
+:
+-
+https
+:
+/
+/
+bugzilla
+.
+mozilla
+.
+org
+/
+show_bug
+.
+cgi
+?
+id
+=
+1992486
+data_sensitivity
+:
+-
+technical
+notification_emails
+:
+-
+mconley
+Mozilla
+.
+com
+expires
+:
+never
+send_in_pings
+:
+-
+newtab
 newtab
 .
 search
