Bug 1995396 - Mark as failing on Android
Differential Revision: https://phabricator.services.mozilla.com/D269295

UltraBlame original commit: 53ddebfea0dda45e6f3007c10f8b7a81c474bd7f

--- a/testing/web-platform/meta/scroll-animations/css/scroll-timeline-paused-animations.html.ini
+++ b/testing/web-platform/meta/scroll-animations/css/scroll-timeline-paused-animations.html.ini
@@ -11,6 +11,17 @@ html
 ]
 expected
 :
+if
+(
+os
+=
+=
+"
+android
+"
+)
+:
+OK
 TIMEOUT
 [
 Test
@@ -42,4 +53,15 @@ state
 ]
 expected
 :
+if
+(
+os
+=
+=
+"
+android
+"
+)
+:
+FAIL
 TIMEOUT
