Bug 1989943 - Secret Setting to Enable App Zygote Process on Fenix r=kaya,android-reviewers,nalexander
Patch adds:
* A secret setting to Enable App Zygote Process on Fenix when SDK >= 29
* A Nimbus instrumentation to toggle the secret setting
* Telemetry to register pref changes

Differential Revision: https://phabricator.services.mozilla.com/D265600

UltraBlame original commit: 081a2dd13ba6d04785716b41e217ccb4a1bae3bb

--- a/mobile/android/fenix/app/metrics.yaml
+++ b/mobile/android/fenix/app/metrics.yaml
@@ -28807,6 +28807,91 @@ tags
 :
 -
 Settings
+app_zygote_isolated_content_processes_enabled
+:
+type
+:
+boolean
+lifetime
+:
+application
+description
+:
+True
+when
+app
+Zygote
+preloading
+with
+isolated
+processes
+is
+enabled
+.
+send_in_pings
+:
+-
+metrics
+bugs
+:
+-
+https
+:
+/
+/
+bugzilla
+.
+mozilla
+.
+org
+/
+show_bug
+.
+cgi
+?
+id
+=
+1989943
+data_reviews
+:
+-
+https
+:
+/
+/
+phabricator
+.
+services
+.
+mozilla
+.
+com
+/
+D265600
+data_sensitivity
+:
+-
+technical
+notification_emails
+:
+-
+android
+-
+probes
+mozilla
+.
+com
+expires
+:
+never
+metadata
+:
+tags
+:
+-
+Settings
+-
+Performance
 search
 .
 default_engine
