--- a/mobile/android/fenix/app/nimbus.fml.yaml
+++ b/mobile/android/fenix/app/nimbus.fml.yaml
@@ -3579,6 +3579,73 @@ Boolean
 default
 :
 true
+safe
+-
+browsing
+-
+v5
+:
+description
+:
+Control
+Safe
+Browsing
+V5
+.
+variables
+:
+feature
+-
+enabled
+:
+description
+:
+>
+-
+If
+true
+this
+feature
+is
+enabled
+.
+Otherwise
+we
+follow
+the
+SafeBrowsing
+V5
+enabled
+pref
+.
+type
+:
+Boolean
+default
+:
+false
+enable
+-
+v5
+:
+description
+:
+>
+-
+Enables
+/
+disables
+the
+SafeBrowsing
+V5
+protocol
+.
+type
+:
+Boolean
+default
+:
+false
 menu
 -
 redesign
@@ -5447,6 +5514,33 @@ or
 not
 to
 enable
+isolated
+content
+processes
+.
+type
+:
+Boolean
+default
+:
+false
+app
+-
+zygote
+-
+preloading
+:
+description
+:
+>
+Whether
+or
+not
+to
+enable
+app
+Zygote
+preloaded
 isolated
 content
 processes
