Bug 1981063 - Consistently enable desktop launcher in artifact vs. normal builds. r=firefox-build-system-reviewers,cdupuis,browser-installer-reviewers,sergesanspaille
Differential Revision: https://phabricator.services.mozilla.com/D267346

UltraBlame original commit: 5c83443c834e686d86c643db1b9d2cb5fa1462da

--- a/browser/installer/Makefile.in
+++ b/browser/installer/Makefile.in
@@ -311,6 +311,17 @@ DMOZ_EME_PROCESS_NAME
 MOZ_EME_PROCESS_NAME
 )
 "
+DEFINES
++
+=
+-
+DMOZ_GPU_PROCESS_NAME
+=
+"
+(
+MOZ_GPU_PROCESS_NAME
+)
+"
 #
 Set
 MSVC
@@ -812,16 +823,6 @@ DEFINES
 =
 -
 DENABLE_WEBDRIVER
-=
-1
-endif
-ifdef
-HAVE_WINHTTP_H
-DEFINES
-+
-=
--
-DDESKTOP_LAUNCHER_ENABLED
 =
 1
 endif
