--- a/browser/installer/windows/nsis/defines.nsi.in
+++ b/browser/installer/windows/nsis/defines.nsi.in
@@ -732,26 +732,8 @@ MOZ_MAINTENANCE_SERVICE
 #
 endif
 #
-Only
-build
-on
-platforms
-that
-have
-WinHTTP
-.
-h
-(
-i
-.
-e
-.
-not
-mingw
-)
-#
 ifdef
-HAVE_WINHTTP_H
+DESKTOP_LAUNCHER_ENABLED
 !
 define
 DESKTOP_LAUNCHER_ENABLED
