Bug 1991512 - Add Taskcluster config to test App Zygote Preloading r=geckoview-reviewers,jmaher,tcampbell
Creates a `zygote` variant to test App Zygote Preloading on request.

Differential Revision: https://phabricator.services.mozilla.com/D266902

UltraBlame original commit: 7b043f8a91bbde7b276beeeda16dfcdd208887b5

--- a/taskcluster/test_configs/variants.yml
+++ b/taskcluster/test_configs/variants.yml
@@ -857,6 +857,71 @@ fission
 "
 geckoview
 -
+zygote
+:
+description
+:
+"
+{
+description
+}
+with
+app
+Zygote
+preloading
+enabled
+"
+component
+:
+"
+GeckoView
+:
+:
+General
+"
+expiration
+:
+"
+2026
+-
+03
+-
+01
+"
+suffix
+:
+"
+zygote
+"
+when
+:
+<
+<
+:
+*
+gv_e10s_filter
+merge
+:
+mozharness
+:
+extra
+-
+options
+:
+-
+"
+-
+-
+enable
+-
+isolated
+-
+zygote
+-
+process
+"
+geckoview
+-
 no
 -
 fission
