--- a/taskcluster/kinds/test/misc.yml
+++ b/taskcluster/kinds/test/misc.yml
@@ -116,6 +116,11 @@ no
 -
 ship
 "
+"
+geckoview
+-
+zygote
+"
 ]
 treeherder
 -
@@ -182,6 +187,12 @@ ship
 built
 -
 projects
+geckoview
+-
+zygote
+:
+[
+]
 default
 :
 [
