Bug 1995050: Update wgpu to upstream a70b8336 (2025-10-16) r=webgpu-reviewers,supply-chain-reviewers,teoxoy
Filed bug 1995066 for regressions in WebGPU CTS on Windows in
webgpu:api,operation,command_buffer,image_copy:offsets_and_sizes

Differential Revision: https://phabricator.services.mozilla.com/D269106

UltraBlame original commit: ce877b3bceb28f21dfda79f99ce663d88c878384

--- a/gfx/wgpu_bindings/moz.yaml
+++ b/gfx/wgpu_bindings/moz.yaml
@@ -51,22 +51,23 @@ rs
 wgpu
 release
 :
-1072b87894b7c3084f80bc9d2679e822435186ba
+a70b8336c01b0869e0459baae5a30fdfe365e5ad
 (
+Thu
+Oct
+16
+15
+:
+58
+:
+18
 2025
 -
-10
--
-06T18
-:
-59
-:
-45Z
+0400
 )
-.
 revision
 :
-1072b87894b7c3084f80bc9d2679e822435186ba
+a70b8336c01b0869e0459baae5a30fdfe365e5ad
 license
 :
 [
