--- a/supply-chain/audits.toml
+++ b/supply-chain/audits.toml
@@ -40831,6 +40831,7 @@ naga
 ]
 who
 =
+[
 "
 Andy
 Leiserson
@@ -40841,6 +40842,19 @@ mozilla
 com
 >
 "
+"
+Jim
+Blandy
+<
+jimb
+red
+-
+bean
+.
+com
+>
+"
+]
 criteria
 =
 "
@@ -40867,7 +40881,7 @@ delta
 0
 git
 :
-1072b87894b7c3084f80bc9d2679e822435186ba
+a70b8336c01b0869e0459baae5a30fdfe365e5ad
 "
 importable
 =
@@ -64342,6 +64356,7 @@ core
 ]
 who
 =
+[
 "
 Andy
 Leiserson
@@ -64352,6 +64367,19 @@ mozilla
 com
 >
 "
+"
+Jim
+Blandy
+<
+jimb
+red
+-
+bean
+.
+com
+>
+"
+]
 criteria
 =
 "
@@ -64378,7 +64406,7 @@ delta
 0
 git
 :
-1072b87894b7c3084f80bc9d2679e822435186ba
+a70b8336c01b0869e0459baae5a30fdfe365e5ad
 "
 importable
 =
@@ -64575,6 +64603,7 @@ apple
 ]
 who
 =
+[
 "
 Andy
 Leiserson
@@ -64585,6 +64614,19 @@ mozilla
 com
 >
 "
+"
+Jim
+Blandy
+<
+jimb
+red
+-
+bean
+.
+com
+>
+"
+]
 criteria
 =
 "
@@ -64611,7 +64653,7 @@ delta
 0
 git
 :
-1072b87894b7c3084f80bc9d2679e822435186ba
+a70b8336c01b0869e0459baae5a30fdfe365e5ad
 "
 importable
 =
@@ -64824,6 +64866,7 @@ android
 ]
 who
 =
+[
 "
 Andy
 Leiserson
@@ -64834,6 +64877,19 @@ mozilla
 com
 >
 "
+"
+Jim
+Blandy
+<
+jimb
+red
+-
+bean
+.
+com
+>
+"
+]
 criteria
 =
 "
@@ -64860,7 +64916,7 @@ delta
 0
 git
 :
-1072b87894b7c3084f80bc9d2679e822435186ba
+a70b8336c01b0869e0459baae5a30fdfe365e5ad
 "
 importable
 =
@@ -65765,6 +65821,7 @@ hal
 ]
 who
 =
+[
 "
 Andy
 Leiserson
@@ -65775,6 +65832,19 @@ mozilla
 com
 >
 "
+"
+Jim
+Blandy
+<
+jimb
+red
+-
+bean
+.
+com
+>
+"
+]
 criteria
 =
 "
@@ -65801,7 +65871,7 @@ delta
 0
 git
 :
-1072b87894b7c3084f80bc9d2679e822435186ba
+a70b8336c01b0869e0459baae5a30fdfe365e5ad
 "
 importable
 =
@@ -66660,6 +66730,7 @@ types
 ]
 who
 =
+[
 "
 Andy
 Leiserson
@@ -66670,6 +66741,19 @@ mozilla
 com
 >
 "
+"
+Jim
+Blandy
+<
+jimb
+red
+-
+bean
+.
+com
+>
+"
+]
 criteria
 =
 "
@@ -66696,7 +66780,7 @@ delta
 0
 git
 :
-1072b87894b7c3084f80bc9d2679e822435186ba
+a70b8336c01b0869e0459baae5a30fdfe365e5ad
 "
 importable
 =
