--- a/testing/web-platform/mozilla/meta/webgpu/cts/webgpu/api/operation/command_buffer/image_copy/cts.https.html.ini
+++ b/testing/web-platform/mozilla/meta/webgpu/cts/webgpu/api/operation/command_buffer/image_copy/cts.https.html.ini
@@ -15606,6 +15606,17 @@ dimension
 2d
 "
 ]
+expected
+:
+if
+os
+=
+=
+"
+win
+"
+:
+FAIL
 [
 :
 initMethod
@@ -15632,6 +15643,17 @@ dimension
 3d
 "
 ]
+expected
+:
+if
+os
+=
+=
+"
+win
+"
+:
+FAIL
 [
 :
 initMethod
@@ -15684,6 +15706,17 @@ dimension
 2d
 "
 ]
+expected
+:
+if
+os
+=
+=
+"
+win
+"
+:
+FAIL
 [
 :
 initMethod
@@ -15710,6 +15743,17 @@ dimension
 3d
 "
 ]
+expected
+:
+if
+os
+=
+=
+"
+win
+"
+:
+FAIL
 [
 :
 initMethod
@@ -15840,6 +15884,17 @@ dimension
 2d
 "
 ]
+expected
+:
+if
+os
+=
+=
+"
+win
+"
+:
+FAIL
 [
 :
 initMethod
@@ -15866,6 +15921,17 @@ dimension
 3d
 "
 ]
+expected
+:
+if
+os
+=
+=
+"
+win
+"
+:
+FAIL
 [
 :
 initMethod
@@ -16230,6 +16296,17 @@ dimension
 2d
 "
 ]
+expected
+:
+if
+os
+=
+=
+"
+win
+"
+:
+FAIL
 [
 :
 initMethod
@@ -16256,6 +16333,17 @@ dimension
 3d
 "
 ]
+expected
+:
+if
+os
+=
+=
+"
+win
+"
+:
+FAIL
 [
 :
 initMethod
@@ -16308,6 +16396,17 @@ dimension
 2d
 "
 ]
+expected
+:
+if
+os
+=
+=
+"
+win
+"
+:
+FAIL
 [
 :
 initMethod
@@ -16334,6 +16433,17 @@ dimension
 3d
 "
 ]
+expected
+:
+if
+os
+=
+=
+"
+win
+"
+:
+FAIL
 [
 :
 initMethod
@@ -16386,6 +16496,17 @@ dimension
 2d
 "
 ]
+expected
+:
+if
+os
+=
+=
+"
+win
+"
+:
+FAIL
 [
 :
 initMethod
@@ -16412,6 +16533,17 @@ dimension
 3d
 "
 ]
+expected
+:
+if
+os
+=
+=
+"
+win
+"
+:
+FAIL
 [
 :
 initMethod
@@ -16464,6 +16596,17 @@ dimension
 2d
 "
 ]
+expected
+:
+if
+os
+=
+=
+"
+win
+"
+:
+FAIL
 [
 :
 initMethod
@@ -16490,6 +16633,17 @@ dimension
 3d
 "
 ]
+expected
+:
+if
+os
+=
+=
+"
+win
+"
+:
+FAIL
 [
 :
 initMethod
@@ -17244,6 +17398,17 @@ dimension
 2d
 "
 ]
+expected
+:
+if
+os
+=
+=
+"
+win
+"
+:
+FAIL
 [
 :
 initMethod
@@ -17270,6 +17435,17 @@ dimension
 3d
 "
 ]
+expected
+:
+if
+os
+=
+=
+"
+win
+"
+:
+FAIL
 [
 :
 initMethod
@@ -17322,6 +17498,17 @@ dimension
 2d
 "
 ]
+expected
+:
+if
+os
+=
+=
+"
+win
+"
+:
+FAIL
 [
 :
 initMethod
@@ -17348,6 +17535,17 @@ dimension
 3d
 "
 ]
+expected
+:
+if
+os
+=
+=
+"
+win
+"
+:
+FAIL
 [
 :
 initMethod
@@ -17400,6 +17598,17 @@ dimension
 2d
 "
 ]
+expected
+:
+if
+os
+=
+=
+"
+win
+"
+:
+FAIL
 [
 :
 initMethod
@@ -17426,6 +17635,17 @@ dimension
 3d
 "
 ]
+expected
+:
+if
+os
+=
+=
+"
+win
+"
+:
+FAIL
 [
 :
 initMethod
@@ -17478,6 +17698,17 @@ dimension
 2d
 "
 ]
+expected
+:
+if
+os
+=
+=
+"
+win
+"
+:
+FAIL
 [
 :
 initMethod
@@ -17504,6 +17735,17 @@ dimension
 3d
 "
 ]
+expected
+:
+if
+os
+=
+=
+"
+win
+"
+:
+FAIL
 [
 :
 initMethod
@@ -33730,25 +33972,11 @@ os
 "
 mac
 "
-and
-debug
 :
 [
 PASS
 FAIL
 ]
-if
-os
-=
-=
-"
-mac
-"
-and
-not
-debug
-:
-FAIL
 [
 :
 initMethod
