--- a/testing/web-platform/mozilla/meta/webgpu/cts/webgpu/shader/execution/expression/call/builtin/textureGather/cts.https.html.ini
+++ b/testing/web-platform/mozilla/meta/webgpu/cts/webgpu/shader/execution/expression/call/builtin/textureGather/cts.https.html.ini
@@ -15138,9 +15138,6 @@ os
 "
 mac
 "
-and
-not
-debug
 :
 [
 PASS
@@ -15425,9 +15422,6 @@ os
 "
 mac
 "
-and
-not
-debug
 :
 [
 PASS
@@ -15464,6 +15458,22 @@ c
 offset
 =
 true
+]
+expected
+:
+if
+os
+=
+=
+"
+mac
+"
+and
+debug
+:
+[
+PASS
+FAIL
 ]
 [
 :
@@ -20608,9 +20618,6 @@ os
 "
 mac
 "
-and
-not
-debug
 :
 [
 PASS
@@ -20696,6 +20703,22 @@ m
 offset
 =
 false
+]
+expected
+:
+if
+os
+=
+=
+"
+mac
+"
+and
+debug
+:
+[
+PASS
+FAIL
 ]
 [
 :
@@ -71885,9 +71908,6 @@ os
 "
 win
 "
-and
-not
-debug
 :
 [
 PASS
@@ -71969,9 +71989,6 @@ os
 "
 win
 "
-and
-not
-debug
 :
 [
 PASS
@@ -72215,9 +72232,6 @@ os
 "
 win
 "
-and
-not
-debug
 :
 [
 PASS
@@ -476234,6 +476248,21 @@ os
 =
 =
 "
+linux
+"
+and
+debug
+:
+[
+PASS
+TIMEOUT
+NOTRUN
+]
+if
+os
+=
+=
+"
 mac
 "
 :
@@ -476351,6 +476380,21 @@ r
 ]
 expected
 :
+if
+os
+=
+=
+"
+linux
+"
+and
+debug
+:
+[
+PASS
+TIMEOUT
+NOTRUN
+]
 if
 os
 =
@@ -517501,8 +517545,26 @@ os
 "
 linux
 "
+and
+debug
 :
 [
+TIMEOUT
+NOTRUN
+]
+if
+os
+=
+=
+"
+linux
+"
+and
+not
+debug
+:
+[
+PASS
 TIMEOUT
 NOTRUN
 ]
@@ -517553,8 +517615,26 @@ os
 "
 linux
 "
+and
+debug
 :
 [
+TIMEOUT
+NOTRUN
+]
+if
+os
+=
+=
+"
+linux
+"
+and
+not
+debug
+:
+[
+PASS
 TIMEOUT
 NOTRUN
 ]
@@ -517605,8 +517685,26 @@ os
 "
 linux
 "
+and
+debug
 :
 [
+TIMEOUT
+NOTRUN
+]
+if
+os
+=
+=
+"
+linux
+"
+and
+not
+debug
+:
+[
+PASS
 TIMEOUT
 NOTRUN
 ]
@@ -522109,8 +522207,26 @@ os
 "
 linux
 "
+and
+debug
 :
 [
+TIMEOUT
+NOTRUN
+]
+if
+os
+=
+=
+"
+linux
+"
+and
+not
+debug
+:
+[
+PASS
 TIMEOUT
 NOTRUN
 ]
@@ -604218,7 +604334,7 @@ not
 debug
 :
 [
-FAIL
+PASS
 TIMEOUT
 NOTRUN
 ]
@@ -604295,8 +604411,26 @@ os
 "
 linux
 "
+and
+debug
 :
 [
+TIMEOUT
+NOTRUN
+]
+if
+os
+=
+=
+"
+linux
+"
+and
+not
+debug
+:
+[
+PASS
 TIMEOUT
 NOTRUN
 ]
@@ -604470,7 +604604,7 @@ not
 debug
 :
 [
-FAIL
+PASS
 TIMEOUT
 NOTRUN
 ]
@@ -604547,8 +604681,26 @@ os
 "
 linux
 "
+and
+debug
 :
 [
+TIMEOUT
+NOTRUN
+]
+if
+os
+=
+=
+"
+linux
+"
+and
+not
+debug
+:
+[
+PASS
 TIMEOUT
 NOTRUN
 ]
@@ -969563,6 +969715,24 @@ os
 "
 mac
 "
+and
+debug
+:
+[
+FAIL
+TIMEOUT
+NOTRUN
+]
+if
+os
+=
+=
+"
+mac
+"
+and
+not
+debug
 :
 FAIL
 [
@@ -990481,6 +990651,56 @@ m
 ]
 expected
 :
+if
+os
+=
+=
+"
+win
+"
+and
+debug
+:
+[
+TIMEOUT
+NOTRUN
+]
+if
+os
+=
+=
+"
+win
+"
+and
+not
+debug
+:
+[
+PASS
+TIMEOUT
+NOTRUN
+]
+if
+os
+=
+=
+"
+linux
+"
+:
+[
+TIMEOUT
+NOTRUN
+]
+if
+os
+=
+=
+"
+mac
+"
+:
 [
 TIMEOUT
 NOTRUN
@@ -990518,6 +990738,56 @@ r
 "
 ]
 expected
+:
+if
+os
+=
+=
+"
+win
+"
+and
+debug
+:
+[
+TIMEOUT
+NOTRUN
+]
+if
+os
+=
+=
+"
+win
+"
+and
+not
+debug
+:
+[
+PASS
+TIMEOUT
+NOTRUN
+]
+if
+os
+=
+=
+"
+linux
+"
+:
+[
+TIMEOUT
+NOTRUN
+]
+if
+os
+=
+=
+"
+mac
+"
 :
 [
 TIMEOUT
@@ -990819,6 +991089,56 @@ c
 ]
 expected
 :
+if
+os
+=
+=
+"
+win
+"
+and
+debug
+:
+[
+TIMEOUT
+NOTRUN
+]
+if
+os
+=
+=
+"
+win
+"
+and
+not
+debug
+:
+[
+PASS
+TIMEOUT
+NOTRUN
+]
+if
+os
+=
+=
+"
+linux
+"
+:
+[
+TIMEOUT
+NOTRUN
+]
+if
+os
+=
+=
+"
+mac
+"
+:
 [
 TIMEOUT
 NOTRUN
@@ -990855,6 +991175,56 @@ m
 ]
 expected
 :
+if
+os
+=
+=
+"
+win
+"
+and
+debug
+:
+[
+TIMEOUT
+NOTRUN
+]
+if
+os
+=
+=
+"
+win
+"
+and
+not
+debug
+:
+[
+PASS
+TIMEOUT
+NOTRUN
+]
+if
+os
+=
+=
+"
+linux
+"
+:
+[
+TIMEOUT
+NOTRUN
+]
+if
+os
+=
+=
+"
+mac
+"
+:
 [
 TIMEOUT
 NOTRUN
@@ -990890,6 +991260,56 @@ r
 "
 ]
 expected
+:
+if
+os
+=
+=
+"
+win
+"
+and
+debug
+:
+[
+TIMEOUT
+NOTRUN
+]
+if
+os
+=
+=
+"
+win
+"
+and
+not
+debug
+:
+[
+PASS
+TIMEOUT
+NOTRUN
+]
+if
+os
+=
+=
+"
+linux
+"
+:
+[
+TIMEOUT
+NOTRUN
+]
+if
+os
+=
+=
+"
+mac
+"
 :
 [
 TIMEOUT
@@ -990927,6 +991347,56 @@ c
 ]
 expected
 :
+if
+os
+=
+=
+"
+win
+"
+and
+debug
+:
+[
+TIMEOUT
+NOTRUN
+]
+if
+os
+=
+=
+"
+win
+"
+and
+not
+debug
+:
+[
+PASS
+TIMEOUT
+NOTRUN
+]
+if
+os
+=
+=
+"
+linux
+"
+:
+[
+TIMEOUT
+NOTRUN
+]
+if
+os
+=
+=
+"
+mac
+"
+:
 [
 TIMEOUT
 NOTRUN
@@ -990963,6 +991433,56 @@ m
 ]
 expected
 :
+if
+os
+=
+=
+"
+win
+"
+and
+debug
+:
+[
+TIMEOUT
+NOTRUN
+]
+if
+os
+=
+=
+"
+win
+"
+and
+not
+debug
+:
+[
+PASS
+TIMEOUT
+NOTRUN
+]
+if
+os
+=
+=
+"
+linux
+"
+:
+[
+TIMEOUT
+NOTRUN
+]
+if
+os
+=
+=
+"
+mac
+"
+:
 [
 TIMEOUT
 NOTRUN
@@ -990998,6 +991518,56 @@ r
 "
 ]
 expected
+:
+if
+os
+=
+=
+"
+win
+"
+and
+debug
+:
+[
+TIMEOUT
+NOTRUN
+]
+if
+os
+=
+=
+"
+win
+"
+and
+not
+debug
+:
+[
+PASS
+TIMEOUT
+NOTRUN
+]
+if
+os
+=
+=
+"
+linux
+"
+:
+[
+TIMEOUT
+NOTRUN
+]
+if
+os
+=
+=
+"
+mac
+"
 :
 [
 TIMEOUT
@@ -991037,6 +991607,56 @@ c
 ]
 expected
 :
+if
+os
+=
+=
+"
+win
+"
+and
+debug
+:
+[
+TIMEOUT
+NOTRUN
+]
+if
+os
+=
+=
+"
+win
+"
+and
+not
+debug
+:
+[
+PASS
+TIMEOUT
+NOTRUN
+]
+if
+os
+=
+=
+"
+linux
+"
+:
+[
+TIMEOUT
+NOTRUN
+]
+if
+os
+=
+=
+"
+mac
+"
+:
 [
 TIMEOUT
 NOTRUN
@@ -991075,6 +991695,56 @@ m
 ]
 expected
 :
+if
+os
+=
+=
+"
+win
+"
+and
+debug
+:
+[
+TIMEOUT
+NOTRUN
+]
+if
+os
+=
+=
+"
+win
+"
+and
+not
+debug
+:
+[
+PASS
+TIMEOUT
+NOTRUN
+]
+if
+os
+=
+=
+"
+linux
+"
+:
+[
+TIMEOUT
+NOTRUN
+]
+if
+os
+=
+=
+"
+mac
+"
+:
 [
 TIMEOUT
 NOTRUN
@@ -991112,6 +991782,56 @@ r
 "
 ]
 expected
+:
+if
+os
+=
+=
+"
+win
+"
+and
+debug
+:
+[
+TIMEOUT
+NOTRUN
+]
+if
+os
+=
+=
+"
+win
+"
+and
+not
+debug
+:
+[
+PASS
+TIMEOUT
+NOTRUN
+]
+if
+os
+=
+=
+"
+linux
+"
+:
+[
+TIMEOUT
+NOTRUN
+]
+if
+os
+=
+=
+"
+mac
+"
 :
 [
 TIMEOUT
@@ -991151,6 +991871,56 @@ c
 ]
 expected
 :
+if
+os
+=
+=
+"
+win
+"
+and
+debug
+:
+[
+TIMEOUT
+NOTRUN
+]
+if
+os
+=
+=
+"
+win
+"
+and
+not
+debug
+:
+[
+PASS
+TIMEOUT
+NOTRUN
+]
+if
+os
+=
+=
+"
+linux
+"
+:
+[
+TIMEOUT
+NOTRUN
+]
+if
+os
+=
+=
+"
+mac
+"
+:
 [
 TIMEOUT
 NOTRUN
@@ -991189,6 +991959,56 @@ m
 ]
 expected
 :
+if
+os
+=
+=
+"
+win
+"
+and
+debug
+:
+[
+TIMEOUT
+NOTRUN
+]
+if
+os
+=
+=
+"
+win
+"
+and
+not
+debug
+:
+[
+PASS
+TIMEOUT
+NOTRUN
+]
+if
+os
+=
+=
+"
+linux
+"
+:
+[
+TIMEOUT
+NOTRUN
+]
+if
+os
+=
+=
+"
+mac
+"
+:
 [
 TIMEOUT
 NOTRUN
@@ -991226,6 +992046,56 @@ r
 "
 ]
 expected
+:
+if
+os
+=
+=
+"
+win
+"
+and
+debug
+:
+[
+TIMEOUT
+NOTRUN
+]
+if
+os
+=
+=
+"
+win
+"
+and
+not
+debug
+:
+[
+PASS
+TIMEOUT
+NOTRUN
+]
+if
+os
+=
+=
+"
+linux
+"
+:
+[
+TIMEOUT
+NOTRUN
+]
+if
+os
+=
+=
+"
+mac
+"
 :
 [
 TIMEOUT
@@ -1019604,6 +1020474,7 @@ and
 debug
 :
 [
+PASS
 TIMEOUT
 NOTRUN
 ]
