--- a/testing/web-platform/mozilla/meta/webgpu/cts/webgpu/shader/execution/expression/call/builtin/textureSample/cts.https.html.ini
+++ b/testing/web-platform/mozilla/meta/webgpu/cts/webgpu/shader/execution/expression/call/builtin/textureSample/cts.https.html.ini
@@ -4167,6 +4167,23 @@ offset
 =
 true
 ]
+expected
+:
+if
+os
+=
+=
+"
+mac
+"
+and
+not
+debug
+:
+[
+PASS
+FAIL
+]
 [
 :
 format
@@ -4572,9 +4589,6 @@ os
 "
 mac
 "
-and
-not
-debug
 :
 [
 PASS
@@ -66765,9 +66779,6 @@ os
 "
 win
 "
-and
-not
-debug
 :
 [
 PASS
@@ -67630,6 +67641,22 @@ os
 =
 =
 "
+win
+"
+and
+not
+debug
+:
+[
+PASS
+TIMEOUT
+NOTRUN
+]
+if
+os
+=
+=
+"
 linux
 "
 :
@@ -77474,7 +77501,7 @@ and
 debug
 :
 [
-FAIL
+PASS
 TIMEOUT
 NOTRUN
 ]
@@ -77950,7 +77977,7 @@ and
 debug
 :
 [
-FAIL
+PASS
 TIMEOUT
 NOTRUN
 ]
@@ -78014,7 +78041,7 @@ and
 debug
 :
 [
-FAIL
+PASS
 TIMEOUT
 NOTRUN
 ]
@@ -894293,7 +894320,7 @@ and
 debug
 :
 [
-FAIL
+PASS
 TIMEOUT
 NOTRUN
 ]
