--- a/testing/web-platform/mozilla/meta/webgpu/cts/webgpu/shader/execution/expression/call/builtin/textureSampleCompareLevel/cts.https.html.ini
+++ b/testing/web-platform/mozilla/meta/webgpu/cts/webgpu/shader/execution/expression/call/builtin/textureSampleCompareLevel/cts.https.html.ini
@@ -48887,7 +48887,7 @@ not
 debug
 :
 [
-FAIL
+PASS
 TIMEOUT
 NOTRUN
 ]
@@ -49181,7 +49181,7 @@ not
 debug
 :
 [
-FAIL
+PASS
 TIMEOUT
 NOTRUN
 ]
@@ -49279,7 +49279,7 @@ not
 debug
 :
 [
-FAIL
+PASS
 TIMEOUT
 NOTRUN
 ]
@@ -57439,8 +57439,26 @@ os
 "
 linux
 "
+and
+debug
 :
 [
+TIMEOUT
+NOTRUN
+]
+if
+os
+=
+=
+"
+linux
+"
+and
+not
+debug
+:
+[
+FAIL
 TIMEOUT
 NOTRUN
 ]
@@ -57491,98 +57509,6 @@ m
 offset
 =
 true
-]
-expected
-:
-if
-os
-=
-=
-"
-win
-"
-and
-debug
-:
-[
-TIMEOUT
-NOTRUN
-]
-if
-os
-=
-=
-"
-win
-"
-and
-not
-debug
-:
-[
-FAIL
-TIMEOUT
-NOTRUN
-]
-if
-os
-=
-=
-"
-linux
-"
-:
-[
-TIMEOUT
-NOTRUN
-]
-if
-os
-=
-=
-"
-mac
-"
-:
-[
-TIMEOUT
-NOTRUN
-]
-[
-:
-stage
-=
-"
-v
-"
-;
-format
-=
-"
-depth16unorm
-"
-;
-filt
-=
-"
-nearest
-"
-;
-modeU
-=
-"
-c
-"
-;
-modeV
-=
-"
-r
-"
-;
-offset
-=
-false
 ]
 expected
 :
@@ -57692,6 +57618,116 @@ r
 ;
 offset
 =
+false
+]
+expected
+:
+if
+os
+=
+=
+"
+win
+"
+and
+debug
+:
+[
+TIMEOUT
+NOTRUN
+]
+if
+os
+=
+=
+"
+win
+"
+and
+not
+debug
+:
+[
+FAIL
+TIMEOUT
+NOTRUN
+]
+if
+os
+=
+=
+"
+linux
+"
+and
+debug
+:
+[
+TIMEOUT
+NOTRUN
+]
+if
+os
+=
+=
+"
+linux
+"
+and
+not
+debug
+:
+[
+FAIL
+TIMEOUT
+NOTRUN
+]
+if
+os
+=
+=
+"
+mac
+"
+:
+[
+TIMEOUT
+NOTRUN
+]
+[
+:
+stage
+=
+"
+v
+"
+;
+format
+=
+"
+depth16unorm
+"
+;
+filt
+=
+"
+nearest
+"
+;
+modeU
+=
+"
+c
+"
+;
+modeV
+=
+"
+r
+"
+;
+offset
+=
 true
 ]
 expected
@@ -58395,8 +58431,26 @@ os
 "
 linux
 "
+and
+debug
 :
 [
+TIMEOUT
+NOTRUN
+]
+if
+os
+=
+=
+"
+linux
+"
+and
+not
+debug
+:
+[
+FAIL
 TIMEOUT
 NOTRUN
 ]
@@ -58487,8 +58541,26 @@ os
 "
 linux
 "
+and
+debug
 :
 [
+TIMEOUT
+NOTRUN
+]
+if
+os
+=
+=
+"
+linux
+"
+and
+not
+debug
+:
+[
+FAIL
 TIMEOUT
 NOTRUN
 ]
@@ -58534,190 +58606,6 @@ modeV
 =
 "
 m
-"
-;
-offset
-=
-false
-]
-expected
-:
-if
-os
-=
-=
-"
-win
-"
-and
-debug
-:
-[
-TIMEOUT
-NOTRUN
-]
-if
-os
-=
-=
-"
-win
-"
-and
-not
-debug
-:
-[
-FAIL
-TIMEOUT
-NOTRUN
-]
-if
-os
-=
-=
-"
-linux
-"
-:
-[
-TIMEOUT
-NOTRUN
-]
-if
-os
-=
-=
-"
-mac
-"
-:
-[
-TIMEOUT
-NOTRUN
-]
-[
-:
-stage
-=
-"
-v
-"
-;
-format
-=
-"
-depth16unorm
-"
-;
-filt
-=
-"
-nearest
-"
-;
-modeU
-=
-"
-r
-"
-;
-modeV
-=
-"
-m
-"
-;
-offset
-=
-true
-]
-expected
-:
-if
-os
-=
-=
-"
-win
-"
-and
-debug
-:
-[
-TIMEOUT
-NOTRUN
-]
-if
-os
-=
-=
-"
-win
-"
-and
-not
-debug
-:
-[
-FAIL
-TIMEOUT
-NOTRUN
-]
-if
-os
-=
-=
-"
-linux
-"
-:
-[
-TIMEOUT
-NOTRUN
-]
-if
-os
-=
-=
-"
-mac
-"
-:
-[
-TIMEOUT
-NOTRUN
-]
-[
-:
-stage
-=
-"
-v
-"
-;
-format
-=
-"
-depth16unorm
-"
-;
-filt
-=
-"
-nearest
-"
-;
-modeU
-=
-"
-r
-"
-;
-modeV
-=
-"
-r
 "
 ;
 offset
@@ -58809,7 +58697,7 @@ r
 modeV
 =
 "
-r
+m
 "
 ;
 offset
@@ -58857,6 +58745,226 @@ linux
 "
 :
 [
+TIMEOUT
+NOTRUN
+]
+if
+os
+=
+=
+"
+mac
+"
+:
+[
+TIMEOUT
+NOTRUN
+]
+[
+:
+stage
+=
+"
+v
+"
+;
+format
+=
+"
+depth16unorm
+"
+;
+filt
+=
+"
+nearest
+"
+;
+modeU
+=
+"
+r
+"
+;
+modeV
+=
+"
+r
+"
+;
+offset
+=
+false
+]
+expected
+:
+if
+os
+=
+=
+"
+win
+"
+and
+debug
+:
+[
+TIMEOUT
+NOTRUN
+]
+if
+os
+=
+=
+"
+win
+"
+and
+not
+debug
+:
+[
+FAIL
+TIMEOUT
+NOTRUN
+]
+if
+os
+=
+=
+"
+linux
+"
+and
+debug
+:
+[
+TIMEOUT
+NOTRUN
+]
+if
+os
+=
+=
+"
+linux
+"
+and
+not
+debug
+:
+[
+FAIL
+TIMEOUT
+NOTRUN
+]
+if
+os
+=
+=
+"
+mac
+"
+:
+[
+TIMEOUT
+NOTRUN
+]
+[
+:
+stage
+=
+"
+v
+"
+;
+format
+=
+"
+depth16unorm
+"
+;
+filt
+=
+"
+nearest
+"
+;
+modeU
+=
+"
+r
+"
+;
+modeV
+=
+"
+r
+"
+;
+offset
+=
+true
+]
+expected
+:
+if
+os
+=
+=
+"
+win
+"
+and
+debug
+:
+[
+TIMEOUT
+NOTRUN
+]
+if
+os
+=
+=
+"
+win
+"
+and
+not
+debug
+:
+[
+FAIL
+TIMEOUT
+NOTRUN
+]
+if
+os
+=
+=
+"
+linux
+"
+and
+debug
+:
+[
+TIMEOUT
+NOTRUN
+]
+if
+os
+=
+=
+"
+linux
+"
+and
+not
+debug
+:
+[
+FAIL
 TIMEOUT
 NOTRUN
 ]
@@ -59692,7 +59800,7 @@ not
 debug
 :
 [
-FAIL
+PASS
 TIMEOUT
 NOTRUN
 ]
@@ -59784,7 +59892,7 @@ not
 debug
 :
 [
-FAIL
+PASS
 TIMEOUT
 NOTRUN
 ]
@@ -60010,7 +60118,7 @@ not
 debug
 :
 [
-FAIL
+PASS
 TIMEOUT
 NOTRUN
 ]
@@ -60102,7 +60210,7 @@ not
 debug
 :
 [
-FAIL
+PASS
 TIMEOUT
 NOTRUN
 ]
