--- a/testing/web-platform/mozilla/meta/webgpu/cts/webgpu/web_platform/copyToTexture/ImageBitmap/dedicated.https.html.ini
+++ b/testing/web-platform/mozilla/meta/webgpu/cts/webgpu/web_platform/copyToTexture/ImageBitmap/dedicated.https.html.ini
@@ -14413,6 +14413,7 @@ and
 debug
 :
 [
+PASS
 TIMEOUT
 NOTRUN
 ]
@@ -37637,6 +37638,22 @@ debug
 TIMEOUT
 NOTRUN
 ]
+if
+os
+=
+=
+"
+mac
+"
+and
+not
+debug
+:
+[
+PASS
+TIMEOUT
+NOTRUN
+]
 [
 :
 alpha
@@ -40518,7 +40535,11 @@ and
 not
 debug
 :
+[
 FAIL
+TIMEOUT
+NOTRUN
+]
 [
 :
 alpha
@@ -40636,7 +40657,11 @@ and
 not
 debug
 :
+[
 FAIL
+TIMEOUT
+NOTRUN
+]
 [
 :
 alpha
@@ -61132,6 +61157,7 @@ and
 debug
 :
 [
+PASS
 TIMEOUT
 NOTRUN
 ]
