--- a/testing/web-platform/mozilla/meta/webgpu/cts/webgpu/shader/execution/expression/call/builtin/textureSampleBias/cts.https.html.ini
+++ b/testing/web-platform/mozilla/meta/webgpu/cts/webgpu/shader/execution/expression/call/builtin/textureSampleBias/cts.https.html.ini
@@ -72676,7 +72676,7 @@ not
 debug
 :
 [
-FAIL
+PASS
 TIMEOUT
 NOTRUN
 ]
@@ -239927,6 +239927,50 @@ false
 ]
 expected
 :
+if
+os
+=
+=
+"
+win
+"
+:
+FAIL
+if
+os
+=
+=
+"
+linux
+"
+:
+FAIL
+if
+os
+=
+=
+"
+mac
+"
+and
+debug
+:
+[
+FAIL
+TIMEOUT
+NOTRUN
+]
+if
+os
+=
+=
+"
+mac
+"
+and
+not
+debug
+:
 FAIL
 [
 :
@@ -239959,6 +240003,50 @@ offset
 true
 ]
 expected
+:
+if
+os
+=
+=
+"
+win
+"
+:
+FAIL
+if
+os
+=
+=
+"
+linux
+"
+:
+FAIL
+if
+os
+=
+=
+"
+mac
+"
+and
+debug
+:
+[
+FAIL
+TIMEOUT
+NOTRUN
+]
+if
+os
+=
+=
+"
+mac
+"
+and
+not
+debug
 :
 FAIL
 [
@@ -240147,6 +240235,50 @@ false
 ]
 expected
 :
+if
+os
+=
+=
+"
+win
+"
+:
+FAIL
+if
+os
+=
+=
+"
+linux
+"
+:
+FAIL
+if
+os
+=
+=
+"
+mac
+"
+and
+debug
+:
+[
+FAIL
+TIMEOUT
+NOTRUN
+]
+if
+os
+=
+=
+"
+mac
+"
+and
+not
+debug
+:
 FAIL
 [
 :
@@ -240179,6 +240311,50 @@ offset
 true
 ]
 expected
+:
+if
+os
+=
+=
+"
+win
+"
+:
+FAIL
+if
+os
+=
+=
+"
+linux
+"
+:
+FAIL
+if
+os
+=
+=
+"
+mac
+"
+and
+debug
+:
+[
+FAIL
+TIMEOUT
+NOTRUN
+]
+if
+os
+=
+=
+"
+mac
+"
+and
+not
+debug
 :
 FAIL
 [
@@ -240279,6 +240455,50 @@ false
 ]
 expected
 :
+if
+os
+=
+=
+"
+win
+"
+:
+FAIL
+if
+os
+=
+=
+"
+linux
+"
+:
+FAIL
+if
+os
+=
+=
+"
+mac
+"
+and
+debug
+:
+[
+FAIL
+TIMEOUT
+NOTRUN
+]
+if
+os
+=
+=
+"
+mac
+"
+and
+not
+debug
+:
 FAIL
 [
 :
@@ -240311,6 +240531,50 @@ offset
 true
 ]
 expected
+:
+if
+os
+=
+=
+"
+win
+"
+:
+FAIL
+if
+os
+=
+=
+"
+linux
+"
+:
+FAIL
+if
+os
+=
+=
+"
+mac
+"
+and
+debug
+:
+[
+FAIL
+TIMEOUT
+NOTRUN
+]
+if
+os
+=
+=
+"
+mac
+"
+and
+not
+debug
 :
 FAIL
 [
