--- a/testing/web-platform/mozilla/meta/webgpu/cts/webgpu/web_platform/copyToTexture/ImageBitmap/shared.https.html.ini
+++ b/testing/web-platform/mozilla/meta/webgpu/cts/webgpu/web_platform/copyToTexture/ImageBitmap/shared.https.html.ini
@@ -14413,6 +14413,7 @@ and
 debug
 :
 [
+PASS
 TIMEOUT
 NOTRUN
 ]
@@ -25581,8 +25582,26 @@ os
 "
 linux
 "
+and
+debug
 :
 [
+TIMEOUT
+NOTRUN
+]
+if
+os
+=
+=
+"
+linux
+"
+and
+not
+debug
+:
+[
+PASS
 TIMEOUT
 NOTRUN
 ]
